2012-12-18  Araki Ken  <arakiken@users.sf.net>

	* x_draw_string.c:
	  "xfont->is_proportional && ! xfont->is_var_col_width" is replaced by
	  draw_alone of x_calculate_char_width().

	* xlib/x_font.c:
	  Whether the width of U+2580 - U+259f whose width is ambiguous
	  is the same as font->width or not is checked explicitly, because
	  their glyphs of some fonts (e.g. GNU Unifont) are full width.

	* x_font.h, fb/x_font.c, win32/x_font.c, xlib/x_font.c, x_screen.c:
	  draw_alone argument is added to x_calculate_char_width().

	* etc/main, etc/main.ja: Updated.

2012-12-16  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_display.c:
	  #include <windows.h> is placed before Xlib.h is included in order to
	  avoid compilation error in cygwin/X.

	* x_screen.c, win32/x_window.c:
	  UTF8 text is supported for setting the window title by OSC 0 or OSC 2
	  in win32.

	* mlcc/comm.c:
	  - Wait the next bytes until 0.01 second elapse in read_one().
	    ("\x1bOA" is separated to "\x1b", "O" and "A" without this in cygwin.)
	  - The way of determining KEY_BS and KEY_DEL is fixed.
	  - "use_ind", "alpha" and "use_clipboard" options are supported.

	* configure.in: Fix the way of checking the existence of gdiplus.h.

2012-12-15  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.win32, doc/ja/README.win32: Updated.

	* version.h.in: 3.1.6 -> 3.1.7pre

	* configure.in, xlib/x_imagelib.c:
	  USE_EXT_IMAGELIB => BUILTIN_IMAGELIB

2012-12-14  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c:
	  - Illegal format of cardinal data is fixed.
	  - Code cleanup.

2012-12-14  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c: If gdk-pixbuf is not built in mlterm,
	  "mlimgloader 0 0 0 path -c" creates cardinal data instead
	  of creating cardinal from Pixmap.

	* fb/x_window.c: Minor fixes.

	* c_imagelib.c, mlimgloader/gdk-pixbuf.c:
	  #ifndef USE_WIN32GUI -> #ifdef USE_X11

2012-12-13  Araki Ken  <arakiken@users.sf.net>
